--- a/HackerRankMobile/Info.plist
+++ b/HackerRankMobile/Info.plist
@@ -30,6 +30,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Share photos with your friends.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Share photos with your friends.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
