image post fix almost done
trying to fix issues in image posting.

--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,4 @@ Carthage/Build
 fastlane/report.xml
 fastlane/screenshots
 HackerRankMobile.xcworkspace/xcuserdata/lukesolomon.xcuserdatad/UserInterfaceState.xcuserstate
+HackerRankMobile.xcworkspace/xcuserdata/lukesolomon.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
